Remove extraction of mode_labels_unfiltered in mode_specific_metrics notebook.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -114,7 +114,7 @@
    "id": "9704f9f8",
    "metadata": {},
    "source": [
-    "### Unfiltered Lists of mode, purpose and replaced mode"
+    "### Unfiltered Lists of purpose and replaced mode"
    ]
   },
   {
@@ -124,7 +124,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mode_labels_unfiltered = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
     "purpose_labels_unfiltered = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "replaced_labels_unfiltered = expanded_ct['Replaced_mode'].value_counts(dropna=True).keys().tolist()"
    ]
