Remove extraction of replaced_labels_unfiltered in generic_metrics notebook.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -100,7 +100,7 @@
    "id": "75896a28",
    "metadata": {},
    "source": [
-    "### Unfiltered Lists of mode, purpose and replaced mode"
+    "### Unfiltered Lists of mode, purpose"
    ]
   },
   {
@@ -111,8 +111,7 @@
    "outputs": [],
    "source": [
     "mode_labels_unfiltered = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
-    "purpose_labels_unfiltered = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
-    "replaced_labels_unfiltered = expanded_ct['Replaced_mode'].value_counts(dropna=True).keys().tolist()"
+    "purpose_labels_unfiltered = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()"
    ]
   },
   {
