Replace call to barplot_sensed_mode() with barplot_mode().

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -265,7 +265,7 @@
     "    \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    \n",
-    "    barplot_sensed_mode(data,x,y,plot_title, expanded_ct['primary_mode'].dropna().unique().tolist(), file_name)\n",
+    "    barplot_mode(data,x,y,plot_title, expanded_ct['primary_mode'].dropna().unique().tolist(), file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['primary_mode']), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
