--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = None\n",
-    "month = None\n",
+    "year = 2020\n",
+    "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"program\"\n",
     "mode_of_interest = \"train\"\n",
