--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = None\n",
-    "month = None\n",
+    "year = 2020\n",
+    "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"program\"\n",
     "mode_of_interest = \"e-bike\"\n",
