--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -72,6 +72,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "529a1ee8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set the label-units just once!\n",
+    "if use_imperial:\n",
+    "    label_units = \"Miles\"\n",
+    "else:\n",
+    "    label_units = \"Kilometers\"\n",
+    "    \n",
+    "label_units_lower = label_units.lower()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "intellectual-columbus",
    "metadata": {},
@@ -220,21 +236,19 @@
     "cutoff = expanded_ct.distance.quantile(0.8)\n",
     "\n",
     "if use_imperial:\n",
-    "    dist_unit = \"miles\"\n",
     "    dist_threshold = expanded_ct.distance_miles.quantile(0.8).round(1)\n",
     "else:\n",
-    "    dist_unit = \"kilometers\"\n",
     "    dist_threshold = expanded_ct.distance_kms.quantile(0.8).round(1)\n",
     "\n",
     "dist_threshold = str(dist_threshold)   \n",
-    "plot_title_no_quality=\"Mode confirmations for trips under \" + dist_threshold + \" \" + dist_unit\n",
-    "plot_title_no_quality=plot_title_no_quality+\"\\n[\"+dist_threshold + \" \" + dist_unit+\" represents 80th percentile of trip length]\"\n",
+    "plot_title_no_quality=\"Mode confirmations for trips under \" + dist_threshold + \" \" + label_units_lower\n",
+    "plot_title_no_quality=plot_title_no_quality+\"\\n[\"+dist_threshold + \" \" + label_units_lower+\" represents 80th percentile of trip length]\"\n",
     "file_name ='ntrips_under10miles_mode_confirm%s' % file_suffix\n",
     "\n",
     "try:\n",
     "    labels_d10 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "    values_d10 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].Mode_confirm.value_counts(dropna=True).tolist()\n",
-    "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"< \" + dist_threshold + \" \" + dist_unit, include_test_users)\n",
+    "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"< \" + dist_threshold + \" \" + label_units_lower, include_test_users)\n",
     "    plot_title = plot_title_no_quality+\"\\n\"+d10_quality_text\n",
     "    pie_chart_mode(plot_title,labels_d10,values_d10,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
@@ -264,14 +278,14 @@
    },
    "outputs": [],
    "source": [
-    "if use_imperial:\n",
-    "    plot_title_no_quality=\"Miles for each mode (selected by users)\"\n",
-    "else:\n",
-    "    plot_title_no_quality=\"Kilometers for each mode (selected by users)\"\n",
-    "    \n",
+    "plot_title_no_quality= label_units + \" for each mode (selected by users)\"\n",
+    "plot_title=plot_title_no_quality + '\\n' + quality_text\n",
     "file_name ='miles_mode_confirm%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    labels_m = []\n",
+    "    values_m = []\n",
+    "    \n",
     "    if use_imperial:\n",
     "        miles = expanded_ct.groupby('Mode_confirm').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
     "        miles.columns = ['Total (miles)', 'Count', 'Average (miles)']\n",
@@ -281,18 +295,9 @@
     "        #data\n",
     "        miles_dict = dict(zip(miles['Mode_confirm'], miles['Total (miles)']))\n",
     "\n",
-    "        labels_m = []\n",
-    "        values_m = []\n",
-    "\n",
     "        for x, y in miles_dict.items():\n",
     "            labels_m.append(x)\n",
     "            values_m.append(y)\n",
-    "\n",
-    "        plot_title=plot_title_no_quality + '\\n' + quality_text\n",
-    "\n",
-    "        pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
-    "        alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
-    "        print(miles)\n",
     "    else:\n",
     "        kilometers = expanded_ct.groupby('Mode_confirm').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
     "        kilometers.columns = ['Total (kilometers)', 'Count', 'Average (kilometers)']\n",
@@ -302,18 +307,12 @@
     "        #data\n",
     "        kilometers_dict = dict(zip(kilometers['Mode_confirm'], kilometers['Total (kilometers)']))\n",
     "\n",
-    "        labels_m = []\n",
-    "        values_m = []\n",
-    "\n",
     "        for x, y in kilometers_dict.items():\n",
     "            labels_m.append(x)\n",
     "            values_m.append(y)\n",
     "\n",
-    "        plot_title=plot_title_no_quality + '\\n' + quality_text\n",
-    "\n",
-    "        pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
-    "        alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
-    "        print(kilometers)\n",
+    "    pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
+    "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
@@ -334,32 +333,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if use_imperial:\n",
-    "    plot_title_no_quality=\" Average Miles for each mode with > 3 entries\"\n",
-    "else:\n",
-    "    plot_title_no_quality=\" Average Kilometers for each mode with > 3 entries\"\n",
-    "\n",
+    "plot_title_no_quality=\"Average \"+ label_units+\" for each mode with > 3 entries\"\n",
     "file_name ='average_miles_mode_confirm%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    x='Mode_confirm'\n",
+    "    y='Average ('+label_units_lower+')'\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    \n",
     "    if use_imperial:\n",
     "        data = miles.drop((miles.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
-    "        x='Mode_confirm'\n",
-    "        y='Average (miles)'\n",
-    "\n",
-    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "\n",
-    "        barplot_mode(data,x,y,plot_title, expanded_ct['Mode_confirm'].dropna().unique().tolist(), file_name)\n",
-    "        alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)\n",
     "    else:\n",
     "        data = kilometers.drop((kilometers.query(\"Count < 3\").index)).sort_values(by=['Average (kilometers)'], ascending=False)\n",
-    "        x='Mode_confirm'\n",
-    "        y='Average (kilometers)'\n",
     "\n",
-    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "\n",
-    "        barplot_mode(data,x,y,plot_title, expanded_ct['Mode_confirm'].dropna().unique().tolist(), file_name)\n",
-    "        alt_text = store_alt_text_bar(pd.DataFrame(data['Average (kilometers)'].values, data['Mode_confirm']), file_name, plot_title)\n",
+    "    barplot_mode(data,x,y,plot_title, expanded_ct['Mode_confirm'].dropna().unique().tolist(), file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data['Mode_confirm']), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
