even less duplicate code in generic_metrics!

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -283,33 +283,22 @@
     "file_name ='miles_mode_confirm%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    if use_imperial:\n",
+    "        dist = expanded_ct.groupby('Mode_confirm').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
+    "    else:\n",
+    "        dist = expanded_ct.groupby('Mode_confirm').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
+    "\n",
+    "    dist.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
+    "    dist = dist.reset_index()\n",
+    "    dist =dist.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
+    "    dist_dict = dict(zip(dist['Mode_confirm'], dist['Total ('+label_units_lower+')']))\n",
+    "    \n",
     "    labels_m = []\n",
     "    values_m = []\n",
     "    \n",
-    "    if use_imperial:\n",
-    "        miles = expanded_ct.groupby('Mode_confirm').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
-    "        miles.columns = ['Total (miles)', 'Count', 'Average (miles)']\n",
-    "        miles = miles.reset_index()\n",
-    "        miles =miles.sort_values(by=['Total (miles)'], ascending=False)\n",
-    "\n",
-    "        #data\n",
-    "        miles_dict = dict(zip(miles['Mode_confirm'], miles['Total (miles)']))\n",
-    "\n",
-    "        for x, y in miles_dict.items():\n",
-    "            labels_m.append(x)\n",
-    "            values_m.append(y)\n",
-    "    else:\n",
-    "        kilometers = expanded_ct.groupby('Mode_confirm').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
-    "        kilometers.columns = ['Total (kilometers)', 'Count', 'Average (kilometers)']\n",
-    "        kilometers = kilometers.reset_index()\n",
-    "        kilometers =kilometers.sort_values(by=['Total (kilometers)'], ascending=False)\n",
-    "\n",
-    "        #data\n",
-    "        kilometers_dict = dict(zip(kilometers['Mode_confirm'], kilometers['Total (kilometers)']))\n",
-    "\n",
-    "        for x, y in kilometers_dict.items():\n",
-    "            labels_m.append(x)\n",
-    "            values_m.append(y)\n",
+    "    for x, y in dist_dict.items():\n",
+    "        labels_m.append(x)\n",
+    "        values_m.append(y)\n",
     "\n",
     "    pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
@@ -341,10 +330,7 @@
     "    y='Average ('+label_units_lower+')'\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    \n",
-    "    if use_imperial:\n",
-    "        data = miles.drop((miles.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
-    "    else:\n",
-    "        data = kilometers.drop((kilometers.query(\"Count < 3\").index)).sort_values(by=['Average (kilometers)'], ascending=False)\n",
+    "    data = dist.drop((dist.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False)\n",
     "\n",
     "    barplot_mode(data,x,y,plot_title, expanded_ct['Mode_confirm'].dropna().unique().tolist(), file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data['Mode_confirm']), file_name, plot_title)\n",
