remove duplicate code in generic_metrics_sensed

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -57,6 +57,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39ec1d4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set the label-units just once!\n",
+    "if use_imperial:\n",
+    "    label_units = \"Miles\"\n",
+    "else:\n",
+    "    label_units = \"Kilometers\"\n",
+    "    \n",
+    "label_units_lower = label_units.lower()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "intellectual-columbus",
    "metadata": {},
@@ -138,22 +154,20 @@
     "cutoff = expanded_ct.distance.quantile(0.8)\n",
     "\n",
     "if use_imperial:\n",
-    "    dist_unit = \"miles\"\n",
     "    dist_threshold = expanded_ct.distance_miles.quantile(0.8).round(1)\n",
     "else:\n",
-    "    dist_unit = \"kilometers\"\n",
     "    dist_threshold = expanded_ct.distance_kms.quantile(0.8).round(1)\n",
     "\n",
     "dist_threshold = str(dist_threshold)\n",
-    "plot_title_no_quality=\"Number of trips under \" + dist_threshold + \" \" + dist_unit + \" for each primary mode\"\n",
+    "plot_title_no_quality=\"Number of trips under \" + dist_threshold + \" \" + label_units_lower + \" for each primary mode\"\n",
     "plot_title_no_quality=plot_title_no_quality + \"\\n(inferred by OpenPATH from phone sensors)\" \n",
-    "plot_title_no_quality=plot_title_no_quality + \"\\n[\"+dist_threshold + \" \" + dist_unit+\" represents 80th percentile of trip length]\"\n",
+    "plot_title_no_quality=plot_title_no_quality + \"\\n[\"+dist_threshold + \" \" + label_units_lower+\" represents 80th percentile of trip length]\"\n",
     "file_name ='ntrips_under10miles_sensed_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
     "    labels_d10 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].primary_mode.value_counts(dropna=True).keys().tolist()\n",
     "    values_d10 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].primary_mode.value_counts(dropna=True).tolist()\n",
-    "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"< \" + dist_threshold + \" \" + dist_unit, include_test_users)\n",
+    "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"< \" + dist_threshold + \" \" + label_units_lower, include_test_users)\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+d10_quality_text\n",
     "    pie_chart_sensed_mode(plot_title,labels_d10,values_d10,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
@@ -182,56 +196,34 @@
    },
    "outputs": [],
    "source": [
-    "if use_imperial:\n",
-    "    plot_title_no_quality=\"Miles for each primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
-    "else:\n",
-    "    plot_title_no_quality=\"Kilometers for each primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
-    "\n",
+    "plot_title_no_quality = label_units + \" for each primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
+    "plot_title = plot_title_no_quality + quality_text\n",
     "file_name ='miles_sensed_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
     "    if use_imperial:\n",
-    "        miles = expanded_ct.groupby('primary_mode').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
-    "        miles.columns = ['Total (miles)', 'Count', 'Average (miles)']\n",
-    "        miles = miles.reset_index()\n",
-    "        miles =miles.sort_values(by=['Total (miles)'], ascending=False)\n",
-    "\n",
-    "        #data\n",
-    "        miles_dict = dict(zip(miles['primary_mode'], miles['Total (miles)']))\n",
-    "\n",
-    "        labels_m = []\n",
-    "        values_m = []\n",
-    "\n",
-    "        for x, y in miles_dict.items():\n",
-    "            labels_m.append(x)\n",
-    "            values_m.append(y)\n",
-    "\n",
-    "        plot_title=\"Miles for each mode\\n(inferred by OpenPATH from phone sensors)\\n%s\" % quality_text\n",
-    "\n",
-    "        pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
-    "        alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
-    "        print(miles)\n",
+    "        dist = expanded_ct.groupby('primary_mode').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
     "    else:\n",
-    "        kilometers = expanded_ct.groupby('primary_mode').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
-    "        kilometers.columns = ['Total (kilometers)', 'Count', 'Average (kilometers)']\n",
-    "        kilometers = kilometers.reset_index()\n",
-    "        kilometers =kilometers.sort_values(by=['Total (kilometers)'], ascending=False)\n",
+    "        dist = expanded_ct.groupby('primary_mode').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
+    "        \n",
     "\n",
-    "        #data\n",
-    "        kils_dict = dict(zip(kilometers['primary_mode'], kilometers['Total (kilometers)']))\n",
+    "    dist.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
+    "    dist = dist.reset_index()\n",
+    "    dist = dist.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
     "\n",
-    "        labels_m = []\n",
-    "        values_m = []\n",
+    "    #data\n",
+    "    dist_dict = dict(zip(dist['primary_mode'], dist['Total ('+label_units_lower+')']))\n",
     "\n",
-    "        for x, y in kils_dict.items():\n",
-    "            labels_m.append(x)\n",
-    "            values_m.append(y)\n",
+    "    labels_m = []\n",
+    "    values_m = []\n",
     "\n",
-    "        plot_title=\"Kilometers for each mode\\n(inferred by OpenPATH from phone sensors)\\n%s\" % quality_text\n",
+    "    for x, y in dist_dict.items():\n",
+    "        labels_m.append(x)\n",
+    "        values_m.append(y)\n",
+    "        \n",
+    "    pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
+    "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "\n",
-    "        pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
-    "        alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
-    "        print(kilometers)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
@@ -252,54 +244,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\"Miles for each land-based primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
+    "plot_title_no_quality= label_units + \" for each land-based primary mode\\n(inferred by OpenPATH from phone sensors)\"\n",
+    "plot_title = plot_title_no_quality + quality_text\n",
     "file_name ='miles_sensed_mode_land%s' % file_suffix\n",
     "\n",
     "try:\n",
     "    if use_imperial:\n",
-    "        miles = expanded_ct.groupby('primary_mode').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
-    "        miles.columns = ['Total (miles)', 'Count', 'Average (miles)']\n",
-    "        miles = miles.reset_index()\n",
-    "        miles =miles.sort_values(by=['Total (miles)'], ascending=False)\n",
-    "\n",
-    "        #data\n",
-    "        miles_dict = dict(zip(miles['primary_mode'], miles['Total (miles)']))\n",
-    "\n",
-    "        labels_m = []\n",
-    "        values_m = []\n",
-    "\n",
-    "        for x, y in miles_dict.items():\n",
-    "            if x != \"AIR_OR_HSR\":\n",
-    "                labels_m.append(x)\n",
-    "                values_m.append(y)\n",
-    "\n",
-    "        plot_title=\"Miles for each land-based mode\\n(inferred by OpenPATH from phone sensors)\\n%s\" % quality_text\n",
-    "\n",
-    "        pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
-    "        alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
-    "        print(miles)\n",
+    "        dist = expanded_ct.groupby('primary_mode').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
     "    else:\n",
-    "        kilometers = expanded_ct.groupby('primary_mode').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
-    "        kilometers.columns = ['Total (kilometers)', 'Count', 'Average (kilometers)']\n",
-    "        kilometers = kilometers.reset_index()\n",
-    "        kilometers =kilometers.sort_values(by=['Total (kilometers)'], ascending=False)\n",
+    "        dist = expanded_ct.groupby('primary_mode').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
+    "    \n",
+    "    dist.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
+    "    dist = dist.reset_index()\n",
+    "    dist =dist.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
     "\n",
-    "        #data\n",
-    "        kils_dict = dict(zip(kilometers['primary_mode'], kilometers['Total (kilometers)']))\n",
+    "    dist_dict = dict(zip(dist['primary_mode'], dist['Total ('+label_units_lower+')']))\n",
     "\n",
-    "        labels_m = []\n",
-    "        values_m = []\n",
+    "    labels_m = []\n",
+    "    values_m = []\n",
     "\n",
-    "        for x, y in kils_dict.items():\n",
-    "            if x != \"AIR_OR_HSR\":\n",
-    "                labels_m.append(x)\n",
-    "                values_m.append(y)\n",
+    "    for x, y in dist_dict.items():\n",
+    "        if x != \"AIR_OR_HSR\":\n",
+    "            labels_m.append(x)\n",
+    "            values_m.append(y)\n",
     "\n",
-    "        plot_title=\"Kilometers for each land-based mode\\n(inferred by OpenPATH from phone sensors)\\n%s\" % quality_text\n",
+    "    pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
+    "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "\n",
-    "        pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
-    "        alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
-    "        print(kilometers)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
