clean up duplicate code in mode_specific_metrics

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -86,6 +86,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13dd3067",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set the label-units just once!\n",
+    "if use_imperial:\n",
+    "    label_units = \"Miles\"\n",
+    "else:\n",
+    "    label_units = \"Kilometers\"\n",
+    "    \n",
+    "label_units_lower = label_units.lower()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "built-occupation",
    "metadata": {},
@@ -227,18 +243,14 @@
     "try:\n",
     "    if use_imperial:\n",
     "        dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
-    "        dg.columns = ['Total (miles)', 'Count' ,'Average (miles)']\n",
-    "        dg = dg.reset_index()\n",
-    "        dg = dg.sort_values(by=['Total (miles)'], ascending=False)\n",
-    "\n",
-    "        dg_dict = dict(zip(dg['Replaced_mode'], dg['Total (miles)']))\n",
     "    else:\n",
     "        dg=data_eb.groupby('Replaced_mode').agg({'distance_kms': ['sum', 'count' , 'mean']},)\n",
-    "        dg.columns = ['Total (kilometers)', 'Count' ,'Average (kilometers)']\n",
-    "        dg = dg.reset_index()\n",
-    "        dg = dg.sort_values(by=['Total (kilometers)'], ascending=False)\n",
+    "        \n",
+    "    dg.columns = ['Total ('+label_units_lower+')', 'Count' ,'Average ('+label_units_lower+')']\n",
+    "    dg = dg.reset_index()\n",
+    "    dg = dg.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
     "\n",
-    "        dg_dict = dict(zip(dg['Replaced_mode'], dg['Total (kilometers)']))\n",
+    "    dg_dict = dict(zip(dg['Replaced_mode'], dg['Total ('+label_units_lower+')']))\n",
     "    \n",
     "    labels_m = []\n",
     "    values_m = []\n",
@@ -271,32 +283,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if use_imperial:\n",
-    "    plot_title_no_quality=\"Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\"\n",
-    "else:\n",
-    "    plot_title_no_quality=\"Average Kilometers for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\"\n",
-    "\n",
+    "plot_title_no_quality=\"Average \" + label_units + \" for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\"\n",
     "file_name ='average_miles_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    if use_imperial:\n",
-    "        data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
-    "        x='Replaced_mode'\n",
-    "        y='Average (miles)'\n",
-    "        y2 = \"Count\"\n",
+    "    data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False) \n",
+    "        \n",
+    "    x='Replaced_mode'\n",
+    "    y='Average ('+label_units_lower+')'\n",
+    "    y2 = \"Count\"\n",
     "\n",
-    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "        barplot_mode(data,x,y,plot_title, expanded_ct['Replaced_mode'].dropna().unique().tolist(), file_name)\n",
-    "        alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)\n",
-    "    else:\n",
-    "        data = dg.drop((dg.query(\"Count < 3\").index)).sort_values(by=['Average (kilometers)'], ascending=False)\n",
-    "        x='Replaced_mode'\n",
-    "        y='Average (kilometers)'\n",
-    "        y2 = \"Count\"\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    barplot_mode(data,x,y,plot_title, expanded_ct['Replaced_mode'].dropna().unique().tolist(), file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data.Replaced_mode), file_name, plot_title)\n",
     "\n",
-    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "        barplot_mode(data,x,y,plot_title, expanded_ct['Replaced_mode'].dropna().unique().tolist(), file_name)\n",
-    "        alt_text = store_alt_text_bar(pd.DataFrame(data['Average (kilometers)'].values, data.Replaced_mode), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
