clean up duplicate code in mode_spefic_timeseries

--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -81,6 +81,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set the label-units just once!\n",
+    "if use_imperial:\n",
+    "    label_units = \"Miles\"\n",
+    "else:\n",
+    "    label_units = \"Kilometers\"\n",
+    "    \n",
+    "label_units_lower = label_units.lower()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -169,25 +184,19 @@
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
     "\n",
     "        if use_imperial:\n",
-    "            # Sum daily distance traveled for each mode\n",
-    "            mode_distance = data.groupby(['user_id','date_time','mode_confirm'], as_index=False)[['distance_miles']].sum()\n",
-    "            mode_distance.rename(columns={'sum':'distance_miles'}, inplace=True)\n",
-    "            mode_distance['distance_miles'] = mode_distance['distance_miles'].fillna(0)\n",
-    "\n",
-    "            # Add 7-day rolling avg smoothing to better see trends\n",
-    "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'], group_keys=False)['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "            mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','mode_confirm'], group_keys=False)['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "\n",
+    "            dist_col = 'distance_miles'\n",
     "        else:\n",
-    "             # Sum daily distance traveled for each mode\n",
-    "            mode_distance = data.groupby(['user_id','date_time','mode_confirm'], as_index=False)[['distance_kms']].sum()\n",
-    "            mode_distance.rename(columns={'sum':'distance_kms'}, inplace=True)\n",
-    "            mode_distance['distance_kms'] = mode_distance['distance_kms'].fillna(0)\n",
+    "            dist_col = 'distance_kms'\n",
+    "            \n",
+    "        # Sum daily distance traveled for each mode\n",
+    "        mode_distance = data.groupby(['user_id','date_time','mode_confirm'], as_index=False)[[dist_col]].sum()\n",
+    "        mode_distance.rename(columns={'sum': dist_col}, inplace=True)\n",
+    "        mode_distance[dist_col] = mode_distance[dist_col].fillna(0)\n",
     "\n",
-    "            # Add 7-day rolling avg smoothing to better see trends\n",
-    "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'], group_keys=False)['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "            mode_distance['distance_kms_smooth'] = mode_distance.groupby(['user_id','mode_confirm'], group_keys=False)['distance_kms'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "        \n",
+    "        # Add 7-day rolling avg smoothing to better see trends\n",
+    "        mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'], group_keys=False)['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "        mode_distance['distance_smooth'] = mode_distance.groupby(['user_id','mode_confirm'], group_keys=False)[dist_col].apply(lambda x: x.rolling(7,1).mean())\n",
+    "\n",
     "        # This is the mode specific part\n",
     "        mode_counts_interest = mode_counts[mode_counts['mode_confirm']==mode_of_interest].copy()\n",
     "        mode_distance_interest = mode_distance[mode_distance['mode_confirm']==mode_of_interest].copy()\n",
@@ -253,11 +262,7 @@
    "outputs": [],
    "source": [
     "# Plot of total ebikeshare mileage across all users\n",
-    "if use_imperial:\n",
-    "    plot_title_no_quality = f'Daily {mode_of_interest} Distance (miles)'\n",
-    "else:\n",
-    "    plot_title_no_quality = f'Daily {mode_of_interest} Distance (kilometers)'\n",
-    "\n",
+    "plot_title_no_quality = f'Daily {mode_of_interest} Distance ('+label_units_lower+')'\n",
     "file_name = f\"ts_{mode_of_interest}_miles%s\"%file_suffix\n",
     "\n",
     "try:\n",
@@ -265,13 +270,9 @@
     "        # force error generation so that we will go into the \"missing\" data code path\n",
     "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
     "    \n",
-    "    if use_imperial:\n",
-    "        plot_data = mode_distance_interest.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
-    "        ylab = 'Miles'\n",
-    "    else:\n",
-    "        plot_data = mode_distance_interest.groupby(['date_time'])['distance_kms'].agg(['sum']).reset_index()\n",
-    "        ylab = 'Kilometers'\n",
-    "    \n",
+    "    ylab = label_units\n",
+    "    plot_data = mode_distance_interest.groupby(['date_time'])[dist_col].agg(['sum']).reset_index()\n",
+    "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "\n",
     "    timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
@@ -291,16 +292,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_data = mode_distance_interest.groupby(['date_time'])[dist_col].agg(['sum']).reset_index()\n",
+    "plot_data = plot_data.merge(active_users, on='date_time')\n",
+    "plot_data['distance_per_user'] = plot_data['sum'] / plot_data['active_users']\n",
+    "ylab = label_units_lower+'/user'\n",
+    "timeseries_plot(plot_data['date_time'], plot_data['distance_per_user'], plot_title, ylab, file_name)\n",
+    "\n",
+    "plot_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Plot of total ebikeshare mileage normalized by number of users\n",
-    "if use_imperial:\n",
-    "    plot_title_no_quality = f'Daily {mode_of_interest} Distance per Active User (miles)'\n",
-    "else:\n",
-    "    plot_title_no_quality = f'Daily {mode_of_interest} Distance per Active User (kilometers)'\n",
+    "plot_title_no_quality = f'Daily {mode_of_interest} Distance per Active User ('+label_units_lower+')'\n",
     "file_name = f\"ts_{mode_of_interest}_miles_user%s\"%file_suffix\n",
     "\n",
     "try:\n",
@@ -308,12 +321,8 @@
     "        # force error generation so that we will go into the \"missing\" data code path\n",
     "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
     "\n",
-    "    if use_imperial:\n",
-    "        plot_data = mode_distance_interest.groupby(['date_time'])['distance_miles'].agg(['sum']).reset_index()\n",
-    "        ylab = 'miles/user'\n",
-    "    else:\n",
-    "        plot_data = mode_distance_interest.groupby(['date_time'])['distance_kms'].agg(['sum']).reset_index()\n",
-    "        ylab = 'kilometers/user'\n",
+    "    plot_data = mode_distance_interest.groupby(['date_time'])[dist_col].agg(['sum']).reset_index()\n",
+    "    ylab = label_units_lower+'/user'\n",
     "        \n",
     "    plot_data = plot_data.merge(active_users, on='date_time')\n",
     "    plot_data['distance_per_user'] = plot_data['sum'] / plot_data['active_users']\n",
@@ -341,13 +350,8 @@
    "outputs": [],
    "source": [
     "# Plot of ebike mileage share proportion across all users\n",
-    "if use_imperial:\n",
-    "    plot_title_no_quality = f'Daily {mode_of_interest} Distance Proportion (All Users, excluding air)'\n",
-    "    ylab = 'Proportion of Daily Miles'\n",
-    "else:\n",
-    "    plot_title_no_quality = f'Daily {mode_of_interest} Distance Proportion (All Users, excluding air)'\n",
-    "    ylab = 'Proportion of Daily Kilometers'\n",
-    "    \n",
+    "plot_title_no_quality = f'Daily {mode_of_interest} Distance Proportion (All Users, excluding air)'\n",
+    "ylab = 'Proportion of Daily '+label_units  \n",
     "file_name = f\"ts_{mode_of_interest}_miles_proportion%s\"%file_suffix\n",
     "\n",
     "try:\n",
@@ -355,20 +359,13 @@
     "        # force error generation so that we will go into the \"missing\" data code path\n",
     "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
     "\n",
-    "    if use_imperial:\n",
-    "        plot_data = mode_distance_interest.groupby(['date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
-    "        total_miles = mode_distance.groupby(['date_time'], as_index=False)['distance_miles_smooth'].sum()\n",
-    "        plot_data = plot_data.merge(total_miles, on=['date_time'])\n",
-    "        plot_data['dist_proportion'] = plot_data['distance_miles_smooth_x'] / plot_data['distance_miles_smooth_y']\n",
-    "    else:\n",
-    "        plot_data = mode_distance_interest.groupby(['date_time'], as_index=False)['distance_kms_smooth'].sum()\n",
-    "        total_miles = mode_distance.groupby(['date_time'], as_index=False)['distance_kms_smooth'].sum()\n",
-    "        plot_data = plot_data.merge(total_miles, on=['date_time'])\n",
-    "        plot_data['dist_proportion'] = plot_data['distance_kms_smooth_x'] / plot_data['distance_kms_smooth_y']\n",
+    "    plot_data = mode_distance_interest.groupby(['date_time'], as_index=False)['distance_smooth'].sum()\n",
+    "    total_miles = mode_distance.groupby(['date_time'], as_index=False)['distance_smooth'].sum()\n",
+    "    plot_data = plot_data.merge(total_miles, on=['date_time'])\n",
+    "    plot_data['dist_proportion'] = plot_data['distance_smooth_x'] / plot_data['distance_smooth_y']\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    \n",
-    "\n",
     "    timeseries_plot(plot_data['date_time'], plot_data['dist_proportion'], plot_title, ylab, file_name)\n",
     "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
     "except:\n",
@@ -487,17 +484,11 @@
     "        # force error generation so that we will go into the \"missing\" data code path\n",
     "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
     "\n",
-    "    if use_imperial:\n",
-    "        plot_data_mode = mode_distance_interest.groupby(['date_time', 'user_id'], as_index=False)[\"distance_miles_smooth\"].sum()\n",
-    "        plot_data = mode_distance.groupby(['date_time','user_id'], as_index=False)['distance_miles_smooth'].sum()\n",
-    "        plot_data = plot_data.merge(plot_data_mode, on=['date_time', 'user_id'])\n",
-    "        plot_data['mode_dist_proportion'] = plot_data['distance_miles_smooth_y'] / plot_data['distance_miles_smooth_x']\n",
-    "    else:\n",
-    "        plot_data_mode = mode_distance_interest.groupby(['date_time', 'user_id'], as_index=False)[\"distance_kms_smooth\"].sum()\n",
-    "        plot_data = mode_distance.groupby(['date_time','user_id'], as_index=False)['distance_kms_smooth'].sum()\n",
-    "        plot_data = plot_data.merge(plot_data_mode, on=['date_time', 'user_id'])\n",
-    "        plot_data['mode_dist_proportion'] = plot_data['distance_kms_smooth_y'] / plot_data['distance_kms_smooth_x']\n",
-    "        \n",
+    "    plot_data_mode = mode_distance_interest.groupby(['date_time', 'user_id'], as_index=False)[\"distance_smooth\"].sum()\n",
+    "    plot_data = mode_distance.groupby(['date_time','user_id'], as_index=False)['distance_smooth'].sum()\n",
+    "    plot_data = plot_data.merge(plot_data_mode, on=['date_time', 'user_id'])\n",
+    "    plot_data['mode_dist_proportion'] = plot_data['distance_smooth_y'] / plot_data['distance_smooth_x']\n",
+    "      \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "\n",
     "    timeseries_plot(plot_data['date_time'], plot_data['mode_dist_proportion'], plot_title, ylab, file_name)\n",
