final pass of cleaning up if/else blocks

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -106,12 +106,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get timestamp from known year/month/day aggregated to days\n",
     "if use_imperial:\n",
-    "    # Get timestamp from known year/month/day aggregated to days\n",
     "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
     "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2']\n",
     "else:\n",
-    "    # Get timestamp from known year/month/day aggregated to days\n",
     "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance']\n",
     "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_kg_CO2']\n",
     "\n",
@@ -135,9 +134,7 @@
     "        dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, \"MODE\")\n",
     "        data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))\n",
     "    else:\n",
-    "        data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
-    "\n",
-    "        data.head()"
+    "        data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))"
    ]
   },
   {
