--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -234,10 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if use_imperial:\n",
-    "    plot_title_no_quality=f\"Distribution of Miles Replaced by {mode_of_interest}\"\n",
-    "else:\n",
-    "    plot_title_no_quality=f\"Distribution of Kilometers Replaced by {mode_of_interest}\"\n",
+    "plot_title_no_quality=f\"Distribution of \"+label_units+f\" Replaced by {mode_of_interest}\"\n",
     "file_name =f'miles_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
